--- a/privacy.html
+++ b/privacy.html
@@ -2,65 +2,84 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Kebijakan Privasi - MyVueApp</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
-    h1, h2 { color: #333; }
-  </style>
+  <title>Babah Digital - Privacy Policy</title>
+  <!-- Bootstrap CSS (CDN) -->
+  <link 
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpe5wv6kvZKpCO6Hj9mtCTmOFG0C29CFN1B0VV2w5y2w8q55y"
+    crossorigin="anonymous"
+  >
 </head>
 <body>
-  <h1>Kebijakan Privasi MyVueApp</h1>
 
-  <p>
-    Terima kasih telah menggunakan layanan <strong>MyVueApp</strong>. Kebijakan Privasi ini
-    menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi informasi yang Anda berikan
-    saat menggunakan aplikasi atau situs kami.
-  </p>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Babah Digital</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="terms.html">Terms of Service</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  <h2>1. Informasi yang Kami Kumpulkan</h2>
-  <p>
-    Kami dapat mengumpulkan informasi seperti nama, alamat email, dan data lain yang
-    relevan dengan tujuan penggunaan aplikasi. Kami hanya mengumpulkan informasi
-    yang diperlukan untuk memberikan layanan terbaik bagi Anda.
-  </p>
+  <!-- MAIN CONTENT -->
+  <div class="container my-5">
+    <h1 class="mb-4">Privacy Policy</h1>
+    <p>
+      Terima kasih telah menggunakan layanan <strong>Babah Digital</strong>. 
+      Kebijakan Privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, 
+      dan melindungi informasi yang Anda berikan.
+    </p>
 
-  <h2>2. Penggunaan Informasi</h2>
-  <p>
-    Informasi yang kami kumpulkan akan digunakan untuk:
+    <h2>1. Informasi yang Dikumpulkan</h2>
+    <p>
+      Kami dapat mengumpulkan informasi seperti nama, alamat email, dan data relevan 
+      lainnya sesuai kebutuhan. Kami hanya mengumpulkan informasi yang diperlukan untuk 
+      memberikan layanan terbaik bagi Anda.
+    </p>
+
+    <h2>2. Penggunaan Informasi</h2>
     <ul>
-      <li>Meningkatkan kualitas layanan dan fitur di MyVueApp.</li>
-      <li>Mempermudah proses autentikasi atau registrasi pengguna.</li>
-      <li>Mengelola dan menganalisis penggunaan aplikasi.</li>
+      <li>Meningkatkan kualitas dan fitur layanan Babah Digital.</li>
+      <li>Mengelola proses autentikasi atau registrasi pengguna.</li>
+      <li>Menganalisis penggunaan aplikasi/website.</li>
     </ul>
-  </p>
 
-  <h2>3. Perlindungan Data</h2>
-  <p>
-    Kami berkomitmen untuk menjaga keamanan data Anda. Kami menerapkan langkah-langkah
-    teknis dan organisasi yang wajar untuk melindungi informasi pribadi dari akses, penggunaan,
-    atau pengungkapan yang tidak sah.
-  </p>
+    <h2>3. Perlindungan Data</h2>
+    <p>
+      Kami berupaya menjaga keamanan data Anda dengan menerapkan prosedur wajar untuk 
+      mencegah akses yang tidak sah.
+    </p>
 
-  <h2>4. Cookies</h2>
-  <p>
-    Aplikasi kami mungkin menggunakan cookies untuk mempersonalisasi pengalaman Anda. 
-    Anda dapat menonaktifkan cookies di pengaturan browser, namun hal tersebut dapat 
-    mempengaruhi fungsi tertentu di MyVueApp.
-  </p>
+    <h2>4. Perubahan pada Kebijakan Privasi</h2>
+    <p>
+      Kami dapat memperbarui kebijakan ini secara berkala. Setiap perubahan akan diumumkan 
+      di halaman ini. Dengan terus menggunakan layanan ini, Anda dianggap menyetujui 
+      pembaruan yang berlaku.
+    </p>
 
-  <h2>5. Perubahan terhadap Kebijakan Privasi</h2>
-  <p>
-    Kami dapat memperbarui Kebijakan Privasi ini dari waktu ke waktu. Setiap perubahan akan 
-    diumumkan melalui pembaruan di halaman ini. Dengan terus menggunakan MyVueApp, Anda 
-    dianggap menyetujui pembaruan kebijakan privasi.
-  </p>
+    <h2>5. Kontak</h2>
+    <p>
+      Jika Anda memiliki pertanyaan, silakan hubungi kami di 
+      <a href="mailto:babahdigital@gmail.com">support@babahdigital.com</a>.
+    </p>
 
-  <h2>6. Kontak</h2>
-  <p>
-    Jika Anda memiliki pertanyaan atau keluhan terkait Kebijakan Privasi ini, silakan 
-    hubungi kami di <a href="mailto:help@myvueapp.com">help@myvueapp.com</a>.
-  </p>
+    <p><em>Terakhir diperbarui: 28 Januari 2025</em></p>
+  </div>
 
-  <p><em>Terakhir diperbarui: 28 Januari 2025</em></p>
+  <!-- Bootstrap JS (CDN) -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+9dtRkA7B6a8c5DIZn+YBAlGo+p7X"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
