--- a/terms.html
+++ b/terms.html
@@ -2,69 +2,90 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Syarat & Ketentuan - MyVueApp</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
-    h1, h2 { color: #333; }
-  </style>
+  <title>Babah Digital - Terms of Service</title>
+  <!-- Bootstrap CSS (CDN) -->
+  <link 
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpe5wv6kvZKpCO6Hj9mtCTmOFG0C29CFN1B0VV2w5y2w8q55y"
+    crossorigin="anonymous"
+  >
 </head>
 <body>
-  <h1>Syarat &amp; Ketentuan Penggunaan MyVueApp</h1>
 
-  <p>
-    Dengan mengakses atau menggunakan layanan <strong>MyVueApp</strong>, Anda setuju untuk
-    terikat oleh syarat dan ketentuan berikut. Apabila Anda tidak menyetujui bagian apa pun
-    dari ketentuan ini, Anda disarankan untuk tidak menggunakan layanan kami.
-  </p>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Babah Digital</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="privacy.html">Privacy Policy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  <h2>1. Penggunaan Layanan</h2>
-  <p>
-    Anda bertanggung jawab atas kegiatan yang dilakukan menggunakan akun Anda, serta menjaga
-    kerahasiaan informasi login. MyVueApp hanya dapat digunakan untuk tujuan yang sah sesuai 
-    hukum yang berlaku.
-  </p>
+  <!-- MAIN CONTENT -->
+  <div class="container my-5">
+    <h1 class="mb-4">Terms of Service</h1>
 
-  <h2>2. Hak Kekayaan Intelektual</h2>
-  <p>
-    Seluruh konten, merek dagang, dan logo yang terdapat di MyVueApp adalah milik kami atau
-    pihak ketiga yang telah memberikan lisensi kepada kami. Anda tidak diperkenankan untuk
-    menggunakan konten atau merek tersebut tanpa izin tertulis.
-  </p>
+    <p>
+      Dengan mengakses atau menggunakan layanan <strong>Babah Digital</strong>, Anda setuju 
+      dengan syarat dan ketentuan berikut. Apabila Anda tidak menyetujui bagian apa pun, 
+      silakan berhenti menggunakan layanan kami.
+    </p>
 
-  <h2>3. Pembaruan & Perubahan Layanan</h2>
-  <p>
-    Kami dapat memperbarui atau mengubah fitur MyVueApp sewaktu-waktu, termasuk membatasi atau 
-    menghentikan akses ke bagian tertentu. Kami tidak bertanggung jawab apabila terjadi 
-    kerugian atau kerusakan akibat perubahan tersebut.
-  </p>
+    <h2>1. Penggunaan Layanan</h2>
+    <p>
+      Anda bertanggung jawab atas kegiatan dan keamanan akun Anda. Layanan ini hanya dapat 
+      digunakan untuk tujuan yang sah dan tidak melanggar hukum.
+    </p>
 
-  <h2>4. Tanggung Jawab Pengguna</h2>
-  <p>
-    Anda bertanggung jawab untuk memastikan penggunaan MyVueApp sesuai dengan peraturan perundang-undangan.
-    Anda juga sepakat untuk tidak menyalahgunakan layanan untuk aktivitas terlarang seperti 
-    penipuan, penyebaran malware, atau tindakan kriminal lainnya.
-  </p>
+    <h2>2. Hak Kekayaan Intelektual</h2>
+    <p>
+      Semua merek dagang, hak cipta, dan konten di Babah Digital adalah milik kami atau 
+      pihak ketiga yang memberikan lisensi. Dilarang menggunakan konten tanpa izin tertulis.
+    </p>
 
-  <h2>5. Batasan Tanggung Jawab</h2>
-  <p>
-    MyVueApp disediakan &quot;sebagaimana adanya&quot; tanpa jaminan apa pun. Kami tidak bertanggung 
-    jawab atas kerugian langsung, tidak langsung, atau konsekuensial yang timbul dari penggunaan 
-    atau ketidakmampuan menggunakan layanan.
-  </p>
+    <h2>3. Pembaruan Layanan</h2>
+    <p>
+      Kami dapat mengubah atau menghentikan fitur layanan sewaktu-waktu tanpa pemberitahuan 
+      terlebih dahulu. Kami tidak bertanggung jawab atas kerugian yang timbul dari perubahan tersebut.
+    </p>
 
-  <h2>6. Perubahan terhadap Ketentuan</h2>
-  <p>
-    Kami dapat mengubah Syarat &amp; Ketentuan ini sewaktu-waktu. Perubahan akan efektif saat
-    diperbarui di halaman ini. Dengan terus menggunakan MyVueApp, Anda dianggap menerima 
-    perubahan tersebut.
-  </p>
+    <h2>4. Batasan Tanggung Jawab</h2>
+    <p>
+      Layanan kami disediakan "sebagaimana adanya" tanpa jaminan apa pun. Kami tidak 
+      bertanggung jawab atas kerusakan langsung atau tidak langsung yang muncul karena 
+      penggunaan atau ketidakmampuan menggunakan layanan.
+    </p>
 
-  <h2>7. Hukum yang Berlaku</h2>
-  <p>
-    Syarat &amp; Ketentuan ini diatur oleh hukum yang berlaku di negara domisili kami. 
-    Sengketa terkait penggunaan layanan akan diselesaikan di pengadilan yang berwenang.
-  </p>
+    <h2>5. Perubahan pada Ketentuan</h2>
+    <p>
+      Kami dapat memperbarui Syarat &amp; Ketentuan ini dari waktu ke waktu. Perubahan 
+      akan efektif setelah diperbarui di halaman ini. Dengan terus menggunakan layanan, 
+      Anda dianggap menerima perubahan tersebut.
+    </p>
 
-  <p><em>Terakhir diperbarui: 28 Januari 2025</em></p>
+    <h2>6. Hukum yang Berlaku</h2>
+    <p>
+      Syarat &amp; Ketentuan ini diatur oleh hukum yang berlaku di yurisdiksi setempat. 
+      Segala perselisihan akan diselesaikan melalui jalur hukum yang berlaku.
+    </p>
+
+    <p><em>Terakhir diperbarui: 28 Januari 2025</em></p>
+  </div>
+
+  <!-- Bootstrap JS (CDN) -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+9dtRkA7B6a8c5DIZn+YBAlGo+p7X"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
