--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Babah Digital - Beranda</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
   <!-- (Opsional) Meta tag untuk verifikasi Google OAuth -->
   <meta name="google-site-verification" content="-TPTiPzCf97_Z_sGxv43UOazHbvtpzgjVZypPirwf2E" />
