--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Babah Digital - Privacy Policy</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <!-- Bootstrap CSS (CDN) -->
   <link 
     rel="stylesheet"
