--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <!-- (Opsional) Meta tag untuk verifikasi Google OAuth -->
   <meta name="google-site-verification" content="-TPTiPzCf97_Z_sGxv43UOazHbvtpzgjVZypPirwf2E" />
 
-  <!-- Bootstrap CSS (CDN) -->
-  <link 
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpe5wv6kvZKpCO6Hj9mtCTmOFG0C29CFN1B0VV2w5y2w8q55y"
-    crossorigin="anonymous"
-  >
+<!-- CSS Bootstrap 5.3.0 -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  integrity="sha384-9ND8Sqk4IGKWrKZEcZHpFa4xNHRK8YiN8cLR7GP2VXVoZz41h73ShQqfkaim4RZ"
+  crossorigin="anonymous"
+/>
 </head>
 <body>
 
@@ -58,11 +58,11 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS (CDN) -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+9dtRkA7B6a8c5DIZn+YBAlGo+p7X"
-    crossorigin="anonymous"
-  ></script>
+<!-- JS Bootstrap Bundle 5.3.0 -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpe5wv6kvZpCO6Hj9mtCTmOFG0C29CFN1B0VV2w5y2w8q55y"
+  crossorigin="anonymous"
+></script>
 </body>
 </html>
