--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
 
   <!-- (Opsional) Meta tag untuk verifikasi Google OAuth -->
   <meta name="google-site-verification" content="-TPTiPzCf97_Z_sGxv43UOazHbvtpzgjVZypPirwf2E" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
-<!-- CSS Bootstrap 5.3.0 -->
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-  integrity="sha384-9ND8Sqk4IGKWrKZEcZHpFa4xNHRK8YiN8cLR7GP2VXVoZz41h73ShQqfkaim4RZ"
-  crossorigin="anonymous"
-/>
 </head>
 <body>
 
