--- a/index.html
+++ b/index.html
@@ -52,11 +52,8 @@
     </div>
   </div>
 
-<!-- JS Bootstrap Bundle 5.3.0 -->
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpe5wv6kvZpCO6Hj9mtCTmOFG0C29CFN1B0VV2w5y2w8q55y"
-  crossorigin="anonymous"
-></script>
+  <!-- JS Bootstrap Bundle 5.3.0 -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
 </body>
 </html>
