--- a/privacy.html
+++ b/privacy.html
@@ -5,12 +5,7 @@
   <title>Babah Digital - Privacy Policy</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <!-- Bootstrap CSS (CDN) -->
-  <link 
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpe5wv6kvZKpCO6Hj9mtCTmOFG0C29CFN1B0VV2w5y2w8q55y"
-    crossorigin="anonymous"
-  >
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -77,10 +72,7 @@
   </div>
 
   <!-- Bootstrap JS (CDN) -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+9dtRkA7B6a8c5DIZn+YBAlGo+p7X"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
